--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -11,7 +11,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true" />
-
+<!--
     <ToggleButton
         android:id="@+id/headlights"
         android:layout_width="96dp"
@@ -38,14 +38,22 @@
         android:layout_alignParentBottom="true"
         android:alpha="0.25"
         />
-
+-->
     <com.MobileAnarchy.Android.Widgets.Joystick.JoystickView
-        android:id="@+id/joystick"
+        android:id="@+id/joystickleft"
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
-        android:layout_width="175dip"
-        android:layout_height="175dip"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
         android:alpha="0.25" />
-        
+
+    <com.MobileAnarchy.Android.Widgets.Joystick.JoystickView
+        android:id="@+id/joystickright"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:alpha="0.25" />
+
 
 </RelativeLayout>
